fixed button border-radius on smaller resolution screen sizes

--- a/app/app/assets/stylesheets/cbv.scss
+++ b/app/app/assets/stylesheets/cbv.scss
@@ -206,10 +206,13 @@ input#invitation_link{
   }
 }
 .copy-link-button {
-  border-radius: 0 0.25rem 0.25rem 0;
-  border-left: none;
   height: 3rem;
   margin-top: 0 !important;
+
+  @include at-media('tablet') {
+    border-radius: 0 0.25rem 0.25rem 0;
+    border-left: none;
+  }
 }
 
 .usa-button--success,
